--- a/web/css/site.css
+++ b/web/css/site.css
@@ -165,3 +165,15 @@ a.desc:after {
 .author img {
     border-radius: 32px;
 }
+
+.tags {
+    list-style: none;
+    padding: 0;
+}
+
+.tags li {
+    display: inline-block;
+    padding: .5rem;
+    background: #eedc43;
+    border-radius: .25em;
+}
