--- a/web/css/style.less
+++ b/web/css/style.less
@@ -41,9 +41,11 @@
 @footer-link-color: @orange-color;
 @footer-link-hover-color: @orange-dark-color;
 
+@screen-lg-min: 1440px;
+
 @container-tablet: (720px + @grid-gutter-width);
-@container-desktop: (940px + @grid-gutter-width);
-@container-large-desktop: (1320px + @grid-gutter-width);
+@container-desktop: (95%);
+@container-large-desktop: (1400px + @grid-gutter-width);
 
 * {
 	.font-primary();
@@ -62,6 +64,7 @@ a {
 
 .navbar-inverse {
 	.font-primary();
+	height: 5rem;
 
 	.navbar-header {
 		.navbar-brand {
@@ -202,25 +205,23 @@ a {
 .projects-flow {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: flex-start;
-	align-content: space-around;
+	justify-content: center;
 	align-items: flex-start;
 
 	.project {
-		@media (min-width: @screen-sm-min) {
-			min-width: 25em;
+		@media (max-width: @screen-sm-max) {
+			min-width: 28rem;
 		}
 
 		@media (min-width: @screen-md-min) {
-			min-width: 25em;
+			min-width: 30rem;
 		}
 
 		@media (min-width: @screen-lg-min) {
-			min-width: 25em;
+			min-width: 36rem;
 		}
 
 		max-width: 402px;
-
 		margin: 1em;
 		flex: 1 0 0;
 		background: #fff;
@@ -229,9 +230,10 @@ a {
 		a.details {
 			.font-secondary;
 			color: #000;
+			display: inline-block;
 
 			h1 {
-				font-size: 16pt;
+				font-size: 14pt;
 				margin: 10px 0 0 0;
 				padding: 0 12px;
 			}
@@ -259,6 +261,10 @@ a {
 			}
 		}
 	}
+
+	.pagination {
+		.clearfix();
+	}
 }
 
 // PROJECT VIEW
@@ -266,7 +272,8 @@ a {
 .project-view {
 	header {
 		.container();
-		padding: 35px 32px;
+		padding-top: 25px;
+		padding-bottom: 25px;
 
 		.title {
 			.make-lg-column(9);
@@ -285,6 +292,7 @@ a {
 
 			ul {
 				list-style: none;
+				text-align: right;
 			}
 		}
 	}
@@ -301,6 +309,7 @@ a {
 			ul.tags {
 				list-style: none;
 				padding: 0;
+				margin: -3px;
 
 				li {
 					display: inline-block;
@@ -375,34 +384,47 @@ a {
 .projects-list {
 	.projects {
 		.container();
-		.bg-colored();
-		position: relative;
+		padding: 0;
 
-		.filters {
-			.make-row();
-			display: block;
-			background-color: #fff;
+		.filters-wrapper {
+			.make-md-column(2);
+			.make-lg-column(2);
 
-			@media (min-width: 1800px) {
-				position: absolute;
-				top: 10px;
-				left: percentage(-1.75/12);
-				width: percentage(1.5/12);
+			margin-top: 1em;
+
+			.title {
+				text-align: center;
+				font-size: 14pt;
+				margin-bottom: 1em;
 			}
 
-			@media (min-width: @screen-xs-min) {
-				padding-top: 10px;
-			}
+			.tags {
+				margin: 3em 0;
 
-			@media (max-width: @screen-md-max) {
-				form {
-					.make-sm-column(12);
+				.list {
+					.item {
+						a {
+							.make-row();
+							display: block;
+							color: #4A4A4A;
+							padding: 5px;
 
-					.form-group {
-						.make-sm-column(4);
+							&:hover, &.selected {
+								background: @primary-blue-color;
+								border-radius: 3px;
+								color: #fff;
+							}
+						}
 
-						&:last-child {
-							.make-sm-column(12);
+						.name {
+							.make-sm-column(8);
+							font-weight: 500;
+							font-size: 12pt;
+						}
+						.count {
+							.make-sm-column(4);
+							text-align: right;
+							font-size: 10pt;
 						}
 					}
 				}
@@ -410,7 +432,18 @@ a {
 		}
 
 		.projects-flow {
+			.bg-colored();
 			margin-left: 0;
+
+			.project {
+				.tags {
+					font-size: 11pt;
+				}
+
+				h1 {
+					font-size: 13pt;
+				}
+			}
 		}
 	}
 }
